--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="responsive.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="checkbox.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assects/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Frontend Mentor | Browser extensions manager UI</title>
 
@@ -21,10 +21,10 @@
     <div class="extension-container">
       <div class="extension-header">
         <div class="logo">
-          <img src="./assects/logo.svg" alt="logo">
+          <img src="./assets/logo.svg" alt="logo">
        
         </div>
-        <button id="btm-visibility"><img src="assects\icon-sun.svg" alt="Sun image" id="logo"></button>
+        <button id="btm-visibility"><img src="assets\icon-sun.svg" alt="Sun image" id="logo"></button>
       </div>
       <div class="extension-filter-container">
         <h2> Extensions List</h2>
