--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <img src="./assets/logo.svg" alt="logo">
        
         </div>
-        <button id="btm-visibility"><img src="assets\icon-sun.svg" alt="Sun image" id="logo"></button>
+        <button id="btm-visibility"><img src="./assets/icon-sun.svg" alt="Sun image" id="logo"></button>
       </div>
       <div class="extension-filter-container">
         <h2> Extensions List</h2>
